# npyWrapper

./: .gitignore  Cargo.toml  README.md
npytesting/: data.npy  main.py
