[package]
name = "npyWrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"              # For numerical data handling
serde = { version = "1.0", features = ["derive"] } # For serialization
reqwest = { version = "0.11", features = ["json"] } # For cloud API requests
tokio = { version = "1", features = ["full"] }      # For async processing
